Ensure sidebar doesn't overflow

--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,7 @@
      /* Keeps content centered vertically */
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .fa-sharp {
